--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,24 @@
 {
-  "manifest_version": 3,
-  "name": "Audio Capture and Process Extension",
+  "name": "Audio Recorder",
   "version": "1.0",
+  "manifest_version": 3,
   "permissions": [
     "activeTab",
-    "tabs"
+    "tabs",
+    "tabCapture"
   ],
-  "host_permissions": [
-    "https://generativelanguage.googleapis.com/"
-  ],
-  "action": {
-    "default_popup": "interface.html",
-    "default_icon": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-    }
-  },
   "background": {
     "service_worker": "background.js"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"]
+  "action": {
+    "default_popup": "interface.html",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
     }
-  ],
+  },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
+    "extension_pages": "script-src 'self'; object-src 'self';"
   }
 }
