--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,5 @@
   "background": {
     "service_worker": "service-worker.js"
   },
-  "permissions": ["tabCapture", "offscreen"]
+  "permissions": ["tabCapture", "offscreen", "activeTab"]
 }
